style: superimposed img(absolute) and updated design for mobile devices

--- a/index.html
+++ b/index.html
@@ -12,25 +12,24 @@
         <!--<link rel="icon" href="" type="image/x-icon">-->
     </head>
     <body>
-        <!--FlexBox here coz i like it, not sure if background is black or it fills whole page-->
         <div id="container">
-            <!-- Will use this div for large image + superimposed small image (probably relative positioning)-->
             <div id="leftContainer">
                 <img id="mainImage" src="images/halie-west-25xggax4bSA-unsplash.jpg"> <!--Put watermark of creator on image too-->
-                <div id="odinContainer"><!--This image has its own div-->
-                    <img>
+                <div id="odinContainer">
+                    <img  src="images/odin-lined.png">
+                    <div>ODIN</div>
                 </div>
             </div>
-            <div id="rightContainer"><!--FlexBox-->
-                <div id="introPara"><!--Probably not a div ultimately, maybe a p tag-->
+            <div id="rightContainer">
+                <div id="introPara">
                     <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
                     <p>You <b><i>know</i></b> you want to.</p>
                 </div>
                 <div id="middleSection">
-                    <div><!--Heading thingy that says Let us do this!-->
+                    <div>
                         <h3>Let's do this!</h3>
                     </div>
-                    <div id="formContainer"><!--form here, use grid 2 colums each on 3 rows-->
+                    <div id="formContainer">
                         <form action="something.com/something" method="post" id="formContainerDiv">
                             <div class="inputLabelDiv">
                                 <label for="first_name">FIRST NAME</label>
@@ -59,7 +58,7 @@
                         </form>
                     </div>
                 </div>
-                <div id="bottomContainer"><!--submit button? here-->
+                <div id="bottomContainer">
                     <button type="submit" id="createAccountBtn">Create Account</button>
                     <div>Already have an account? <b style="color: rgb(0, 71, 171);"> Log in</b> </div> <!--This login is a link or at least looks like link-->
                 </div>
