feat: now supports dark mode

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <div id="container">
             <div id="leftContainer">
-                <img id="mainImage" src="images/halie-west-25xggax4bSA-unsplash.jpg"> <!--Put watermark of creator on image too-->
+                <img id="mainImage" src="images/halie-west-25xggax4bSA-unsplash.jpg">
                 <div id="odinContainer">
                     <img  src="images/odin-lined.png">
                     <div>ODIN</div>
