--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap" rel="stylesheet">
-        <link rel="icon" href="" type="image/x-icon">
+        <link rel="icon" href="images/Flat_tick_icon.svg.png" type="image/x-icon">
     </head>
     <body>
         <div id="container">
